meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report_manager__tests__heartbeat.snap
---
source: memfaultd/src/metrics/metric_report_manager.rs
expression: builder.get_metadata()
---
{
  "type": "linux-metric-report",
  "metadata": {
    "metrics": {
      "bar": 3.5,
      "foo": 5.0
    },
    "duration_ms": 0,
    "boottime_duration_ms": 0,
    "report_type": "heartbeat"
  }
}
